[project]
name = "oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.11.3",
    "duckdb>=1.5.0",
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.41.0",
]
